# rchat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: settings.toml
src/: chatgpt_request.rs  cli.rs  debug_logger.rs  main.rs  printer.rs  settings.rs
src/ai_providers/: ai_provider.rs  mod.rs
src/ai_providers/chatgpt/: chatgpt_messages.rs  chatgpt_provider.rs  chatgpt_request.rs  mod.rs
tests/: test.rs
