[package]
name = "rchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }
dirs = "5.0.1"
serde_json = "1.0.115"
termimad = "0.29.1"
